app/node/devnet/ingress-grpc-tcp.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: kaspad-grpc
  namespace: kaspa
spec:
  entryPoints:
    - websecure
  routes:
    - match: HostSNI(`devnet-grpc.kasia.fyi`)
      services:
        - name: devnet-kaspad-external
          port: 16610
  tls: {}
