app/node/devnet/patch-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kaspad
  namespace: kaspa
spec:
  routes:
    - match: Host(`devnet-wrpc.kasia.fyi`)
      kind: Rule
      middlewares:
        - name: devnet-wrpc-rate-limit
        - name: devnet-wrpc-inflight-limit
        - name: devnet-crowdsec-bouncer
      services:
        - name: devnet-kaspad-external
          kind: Service
          port: 17610
---
apiVersion: v1
kind: Service
metadata:
  name: kaspad-external
  namespace: kaspa
  labels:
    app: devnet-kaspad
spec:
  selector:
    app: devnet-kaspad
  ports:
    - name: wrpc-borsh
      port: 17610
      targetPort: wrpc-borsh
      protocol: TCP
    - name: grpc
      port: 16610
      targetPort: grpc
      protocol: TCP
